deploy-back.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deploy-back
  name: deploy-back
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deploy-back
  template:
    metadata:
      labels:
        app: deploy-back
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
          ports:
            - name: http-8080
              containerPort: 8080
              protocol: TCP
