deploy-front.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deploy-front
  name: deploy-front
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deploy-front
  template:
    metadata:
      labels:
        app: deploy-front
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
