service-back.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service-back
spec:
  selector:
    app: deploy-back
  ports:
    - name: multitool-http
      port: 9002
      protocol: TCP
      targetPort: 8080
