service-front.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service-front
spec:
  selector:
    app: deploy-front
  ports:
    - name: nginx-http
      port: 9001
      protocol: TCP
      targetPort: 80
