ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-front
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: service-back
            port:
              number: 9002
